syntax = "proto3";


package app.improving.storecontext;

import "app/improving/store/api/store_api.proto";
import "app/improving/store/domain/store_context_domain.proto";
import "kalix/annotations.proto";

message AllStoresRequest {}

service AllStoresView {
    option (kalix.codegen) = {
        view: {}
    };

//        "app.improving.storecontext.StoreCreated",
//        "app.improving.storecontext.StoreDeleted",
//        "app.improving.storecontext.StoreOpened",
//        "app.improving.storecontext.StoreUpdated",
//        "app.improving.storecontext.StoreClosed",
//        "app.improving.storecontext.ProductsAddedToStore",
//        "app.improving.storecontext.ProductsRemovedFromStore"

    rpc ProcessStoreCreated(StoreCreated) returns (store.ApiStore) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "stores"
        };
        option (kalix.method).view.update = {
            table: "all_stores"
            transform_updates: true
        };
    }

    rpc ProcessStoreDeleted(StoreDeleted) returns (store.ApiStore) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "stores"
        };
        option (kalix.method).view.update = {
            table: "all_stores"
            transform_updates: true
        };
    }

    rpc ProcessStoreOpened(StoreOpened) returns (store.ApiStore) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "stores"
        };
        option (kalix.method).view.update = {
            table: "all_stores"
            transform_updates: true
        };
    }

    rpc ProcessStoreUpdated(StoreUpdated) returns (store.ApiStore) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "stores"
        };
        option (kalix.method).view.update = {
            table: "all_stores"
            transform_updates: true
        };
    }

    rpc ProcessStoreClosed(StoreClosed) returns (store.ApiStore) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "stores"
        };
        option (kalix.method).view.update = {
            table: "all_stores"
            transform_updates: true
        };
    }

    rpc ProcessProductsAddedToStore(ProductsAddedToStore) returns (store.ApiStore) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "stores"
        };
        option (kalix.method).view.update = {
            table: "all_stores"
            transform_updates: true
        };
    }

    rpc ProcessProductsRemovedFromStore(ProductsRemovedFromStore) returns (store.ApiStore) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "stores"
        };
        option (kalix.method).view.update = {
            table: "all_stores"
            transform_updates: true
        };
    }

    rpc GetAllStores(AllStoresRequest) returns (stream store.ApiStore) {
        option (kalix.method).view.query = {
            query: "SELECT * FROM all_stores"
        };
    }
}